corrected responsive spacing for Time: and seconds

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ main {
     text-align: end;
 }
 
+#seconds {
+    margin-left: -2.2em;
+}
+
 h1 {
     font-size: 2.2em;
     text-align: center;
